# case_extreme

./: .cache.sqlite  case_eds.md  main.py  meteorologia.bd  meteorologia.db  pyproject.toml  q1.sql  q10.py  q2.sql  q3.sql  q4.sql  q5.py  q6.py  q7.sql  q8.sql  q9.py  test.ipynb
datas/: datas1.txt  datas2.txt  datas3.txt
sigtap-simplificado/: DATASUS - Tabela de Procedimentos - Lay-out.xls  rl_procedimento_cid.txt  tb_cid.txt  tb_forma_organizacao.txt  tb_grupo.txt  tb_procedimento.txt  tb_sub_grupo.txt
