[project]
name = "case-extreme"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openmeteo-requests>=1.7.5",
    "pandas>=3.0.1",
    "pathlib>=1.0.1",
    "requests-cache>=1.3.0",
    "retry-requests>=2.0.0",
    "sqlalchemy>=2.0.47",
]
